# Informatics-II-C-

./: All_Algorithms  CMakeLists.txt  Exercise1  Exercise2  Exercise3  Exercise9  main.c
All Exercises/All_Algorithms/: All_Algorithms.c  CMakeLists.txt
All Exercises/Exercise 1/: CMakeLists.txt  Exercise1.c
All Exercises/Exercise 2/: CMakeLists.txt  Exercise2.c
All Exercises/Exercise 2/solution/code/: task_3.c
All Exercises/Exercise 3/: CMakeLists.txt  Exercise3.c
All Exercises/Exercise 4/: CMakeLists.txt  Exercise4.c
All Exercises/Exercise 4/solution/code/: task01.c
All Exercises/Exercise 5/: CMakeLists.txt  Exercise5.c
All Exercises/Exercise 6/: CMakeLists.txt  Exercise6.c
All Exercises/Exercise 7/: CMakeLists.txt  Exercise7.c
All Exercises/Exercise 7/solution/code/task1/: task01_1b.c  task01_1c.c
All Exercises/Exercise 8/: CMakeLists.txt
All Exercises/Exercise 8/solution/code/: task1.c
All Exercises/Exercise 9/: CMakeLists.txt  task3_framework.c
Exercise1.dSYM/Contents/Resources/DWARF/: Exercise1
